--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -137,21 +137,34 @@
               since evolved [8], covering a wide range of domains and computational models.
             </p>
             <p>              
-              While early workflow systems could be seen as a way to formalize 
+              Early workflow systems could be seen as a way to formalize 
               documentation of computational methods, as well as simplifying graphical 
-              access to complex computational resources 
-              (web services, clusters, grids), 
-              <a href="https://doi.org/10.1162/dint_a_00033">recent years</a> 
-              have seen a growth in use of more script-like
-              workflow systems that utillize cloud computing for scalability,
-              containers and package management tools (Docker, Singularity, Conda) 
-              for reliably executing open source tools in their latest versions [8].
-              In wider field there has also been a reemergence of 
+              composition of complex computational resources such as l
+              web services, institutional clusters and national compute grids.
+              In recent years computationally intensive sciences like 
+              bioinformatics, physics and chemistry 
+              have seen a growth in use of 
+              <a href="https://doi.org/10.1162/dint_a_00033">script-like
+              workflow systems</a> that utillize cloud computing for scalability and
+              software containers (Docker, Singularity, Conda) 
+              to reliably execute cutting-edge open source
+              analytical command-line tools
+              across hetereogeneous compute platforms [8], almost as 
+              a side effect improving provenance and reproducibility. 
+            </p>
+            <p>
+              Among researchers in general there is also a reemergence of 
+              <!--Citation needed!-->
               script languages for Data Science using interactive 
-              platforms such as R Studio and Jupyter Notebook, backed by 
-              rich visualization libraries. Open Research 
-              practicioners are now commonly sharing workflow scripts and 
-              notebooks in source repositories like GitHub and GitLab.
+              platforms such as <a href="https://rstudio.com/products/rstudio/">RStudio</a> and 
+              <a href="https://jupyter.org/">Jupyter Notebook</a>, backed by 
+              rich visualization libraries and saving step-by-step 
+              introspectable provenance of a computational analysis. 
+              Open Research practicioners are now commonly sharing workflow scripts and 
+              notebooks in source repositories like GitHub and GitLab, with 
+              cloud-backed web execution through 
+              <a href="https://rstudio.cloud/">RStudio Cloud</a>
+              or <a href="https://mybinder.org/">JupterHub Binder</a>
             </p>
             <p>
               <a href="https://doi.org/10.7717/peerj-cs.86">Software Citation practices</a> [11], 
@@ -175,7 +188,7 @@
             </p>
             <p>
               It has been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
-              that rather than of focusing on a narrow narrative 
+              that rather than of focusing on a negative narrative 
               of a reproducibility "crisis", science should promote transparancy and 
               replicability as an ongoing scolarly revolution that is 
               empowering researchers to do better science [5].
@@ -187,6 +200,9 @@
           </section>
           <section id="research-objects" rel="schema:hasPart" resource="#research-objects">
             <h3 property="schema:name">Research Objects as the answer</h3>
+            <p>
+
+            </p>
           </section>
           <section id="uptake" rel="schema:hasPart" resource="#uptake">
             <h3 property="schema:name">Their uptake and potential in the wild</h3>
