--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -189,7 +189,7 @@
             <p>
               It has been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
               that rather than of focusing on a negative narrative 
-              of a reproducibility "crisis", science should promote transparancy and 
+              of a reproducibility "crisis", academia should promote transparancy and 
               replicability as an ongoing scolarly revolution that is 
               empowering researchers to do better science [5].
               While policy makers, developers and publishers have laid the foundation 
@@ -255,7 +255,7 @@
           </div>
         </section>
 
-        <section id="discussion" rel="schema:hasPart" resource="#typesetting-of-your-paper-at-springer">
+        <section id="discussion" rel="schema:hasPart" resource="#discussion">
           <h2 property="schema:name">Discussion and Future Work<br /></h2>
 
           <div datatype="rdf:HTML" property="schema:description">
