--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -195,14 +195,34 @@
               While policy makers, developers and publishers have laid the foundation 
               for Open Research and FAIR data sharing, a relevant question is to 
               what extent individual researchers have already 
-              taken advantage of the new practices.
+              taken advantage of the new practices of "Academia 2.0".
             </p>
           </section>
           <section id="research-objects" rel="schema:hasPart" resource="#research-objects">
             <h3 property="schema:name">Research Objects as the answer</h3>
             <p>
-
+              Applying the FAIR principles and Open Research practices means that 
+              researchers are now expected to publish and cite additional 
+              software and data resources. Let's take this very paper as an example,
+              with a limited data analysis. Beyond a PDF with static figures,
+              to be a good citizen of Academia 2.0 we will also need to publish:
             </p>
+            <ul>
+              <li>Data management plan</li>
+              <li>Pre-registration of research plan</li>
+              <li>Data citations of third-party sources</li>
+              <li>Data citations of newly produced data</li>
+              <li>Software citations of third-party tools used</li>
+              <li>Software citations of newly produced code</li>
+              <li>Workflow diagram that shows tool composition</li>
+              <li>(Re)executable interoperable workflow</li>
+              <li>(Re)executable analysis for generating tables/figures</li>
+              <li>Preprint under an open license</li>
+              <li>Web accessible HTML with hyperlinked identifiers</li>
+              <li>Open Source / Open Access licenses for all the above (e.g. CC-BY)</li>
+              <li>Use and generate persistent identifiers for all the above (e.g. DOI)</li>
+              <li>Linked Data and Metadata re-using FAIR vocabularies</li>
+            </ul>
           </section>
           <section id="uptake" rel="schema:hasPart" resource="#uptake">
             <h3 property="schema:name">Their uptake and potential in the wild</h3>
