--- a/content/static/ipaw-2020.html
+++ b/content/static/ipaw-2020.html
@@ -203,8 +203,8 @@
             <p>
               Applying the FAIR principles and Open Research practices means that 
               researchers are now expected to publish and cite additional 
-              software and data resources. Let's take this very paper as an example,
-              with a limited data analysis. Beyond a PDF with static figures,
+              software and data resources. Let's take this very article as an example,
+              with a limited data analysis. Beyond a "paper" (static PDF),
               to be a good citizen of Academia 2.0 we will also need to publish:
             </p>
             <ul>
