--- a/static/ipaw-2020.html
+++ b/static/ipaw-2020.html
@@ -100,7 +100,7 @@
             <p></p>
           </div>
           <section id="reproducibility-crisis" rel="schema:hasPart" resource="#reproducibility-crisis">
-            <h3 property="schema:name">Reproducibility crisis as motivation</h3>
+            <h3 property="schema:name">Reproducibility crisis as motivation for FAIR Open Research</h3>
             <p>In the last two decades, academia has increasingly recognized the dangers of a 
               <a href="https://doi.org/10.1038/533452a">reproducibility crisis</a> [1] affecting published research 
               across a <a href="https://doi.org/10.5860/crl.79.1.2">number of diciplines</a> [2].
@@ -112,8 +112,7 @@
               Significant advances in scholarly practices have emerged, in 
               particular journals now frequently require underlying data 
               to be made availabilty in open repositories, and use of 
-              blanket statements like
-              "data available on request" is starting to be  
+              blanket statements like "data available on request" is starting to be  
               recognized as bad practice.
             </p>
             <p>
@@ -138,44 +137,92 @@
               since evolved [8], covering a wide range of domains and computational models.
             </p>
             <p>              
-              While early workflow systems could be seen as a way to formalize 
+              Early workflow systems could be seen as a way to formalize 
               documentation of computational methods, as well as simplifying graphical 
-              access to complex computational resources 
-              (web services, clusters, grids), 
-              <a href="https://doi.org/10.1162/dint_a_00033">recent years</a> 
-              have seen a growth in use of more script-like
-              workflow systems that utillize cloud computing for scalability,
-              containers and package management tools (Docker, Singularity, Conda) 
-              for reliably executing open source tools in their latest versions [8].
-              In wider field there has also been a reemergence of 
-              script languages for Data Science using interactive 
-              platforms such as R Studio and Jupyter Notebook, backed by 
-              rich visualization libraries. Open Research 
-              practicioners are now commonly sharing workflow scripts and 
-              notebooks in source repositories like GitHub and GitLab.
+              composition of complex computational resources such as l
+              web services, institutional clusters and national compute grids.
+              In recent years computationally intensive sciences like 
+              bioinformatics, physics and chemistry 
+              have seen a growth in use of 
+              <a href="https://doi.org/10.1162/dint_a_00033">script-like
+              workflow systems</a> that utillize cloud computing for scalability and
+              software containers (Docker, Singularity, Conda) 
+              to reliably execute cutting-edge open source
+              analytical command-line tools
+              across hetereogeneous compute platforms [8], almost as 
+              a side effect improving provenance and reproducibility. 
             </p>
             <p>
-              Software Citation practices such as publishing
-              code releases from GitHub with a 
-              <a href="https://guides.github.com/activities/citable-code/">DOI from Zenodo</a>,
-              are now actively encouraged by some journals like GigaScience. 
-
-
-              
+              Among researchers in general there is also a reemergence of 
+              <!--Citation needed!-->
+              script languages for Data Science using interactive 
+              platforms such as <a href="https://rstudio.com/products/rstudio/">RStudio</a> and 
+              <a href="https://jupyter.org/">Jupyter Notebook</a>, backed by 
+              rich visualization libraries and saving step-by-step 
+              introspectable provenance of a computational analysis. 
+              Open Research practicioners are now commonly sharing workflow scripts and 
+              notebooks in source repositories like GitHub and GitLab, with 
+              cloud-backed web execution through 
+              <a href="https://rstudio.cloud/">RStudio Cloud</a>
+              or <a href="https://mybinder.org/">JupterHub Binder</a>
             </p>
-
+            <p>
+              <a href="https://doi.org/10.7717/peerj-cs.86">Software Citation practices</a> [11], 
+              such as publishing code releases from GitHub with a 
+              <a href="https://guides.github.com/activities/citable-code/">DOI from Zenodo</a>,
+              are now actively encouraged by journals like GigaScience that 
+              encourage reproducibility.  Funding councils
+              are increasingly requiring 
+              Data Management Plans (DMP), where depositing 
+              in open repositores under a liberal license like 
+              Creative Commons Attribution 
+              (<a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a>)
+              is highly encouraged. The  
+              <a href="https://doi.org/10.1038/sdata.2016.18">FAIR principles</a> 
+              that put importance on interoperability and metadata [12]          
+              is being <a href="https://doi.org/10.2777/836532">recognized</a>
+              by the European Commission [10], required by its 
+              next funding program 
+              <a href="https://ec.europa.eu/info/sites/info/files/research_and_innovation/strategy_on_research_and_innovation/presentations/horizon_europe_en_investing_to_shape_our_future.pdf">Horizon Europe</a> 
+              and essential part of the European Open Science Cloud (<a href="https://www.eosc-portal.eu/">EOSC</a>).
+            </p>
             <p>
               It has been <a href="https://doi.org/10.1073/pnas.1708272114">argued</a>
-              that instead of focusing on a misleading narrative 
-              of a "crisis", science should promote transparancy and reproducibility
-              as a revolution that is empowering researchers to do better science.[5]
-              A relevant question then is to what extent researchers have already 
-              taken advantage of the new tools and practices in data that has been 
-              published openly.
+              that rather than of focusing on a negative narrative 
+              of a reproducibility "crisis", academia should promote transparancy and 
+              replicability as an ongoing scolarly revolution that is 
+              empowering researchers to do better science [5].
+              While policy makers, developers and publishers have laid the foundation 
+              for Open Research and FAIR data sharing, a relevant question is to 
+              what extent individual researchers have already 
+              taken advantage of the new practices of "Academia 2.0".
             </p>
           </section>
           <section id="research-objects" rel="schema:hasPart" resource="#research-objects">
             <h3 property="schema:name">Research Objects as the answer</h3>
+            <p>
+              Applying the FAIR principles and Open Research practices means that 
+              researchers are now expected to publish and cite additional 
+              software and data resources. Let's take this very paper as an example,
+              with a limited data analysis. Beyond a PDF with static figures,
+              to be a good citizen of Academia 2.0 we will also need to publish:
+            </p>
+            <ul>
+              <li>Data management plan</li>
+              <li>Pre-registration of research plan</li>
+              <li>Data citations of third-party sources</li>
+              <li>Data citations of newly produced data</li>
+              <li>Software citations of third-party tools used</li>
+              <li>Software citations of newly produced code</li>
+              <li>Workflow diagram that shows tool composition</li>
+              <li>(Re)executable interoperable workflow</li>
+              <li>(Re)executable analysis for generating tables/figures</li>
+              <li>Preprint under an open license</li>
+              <li>Web accessible HTML with hyperlinked identifiers</li>
+              <li>Open Source / Open Access licenses for all the above (e.g. CC-BY)</li>
+              <li>Use and generate persistent identifiers for all the above (e.g. DOI)</li>
+              <li>Linked Data and Metadata re-using FAIR vocabularies</li>
+            </ul>
           </section>
           <section id="uptake" rel="schema:hasPart" resource="#uptake">
             <h3 property="schema:name">Their uptake and potential in the wild</h3>
@@ -228,7 +275,7 @@
           </div>
         </section>
 
-        <section id="discussion" rel="schema:hasPart" resource="#typesetting-of-your-paper-at-springer">
+        <section id="discussion" rel="schema:hasPart" resource="#discussion">
           <h2 property="schema:name">Discussion and Future Work<br /></h2>
 
           <div datatype="rdf:HTML" property="schema:description">
@@ -309,11 +356,35 @@
                   <a href="https://doi.org/10.1016/j.future.2017.05.041">https://doi.org/10.1016/j.future.2017.05.041</a>
                   <small>(not Open Access, see <a href="https://hal.archives-ouvertes.fr/hal-01544818">preprint hal-01544818</a>)</small>
               </li>
-              <li id="ref-8" property="schema:citation">
+              <li id="ref-9" property="schema:citation">
                 Carole Goble, Sarah Cohen-Boulakia, Stian Soiland-Reyes, Daniel Garijo, Yolanda Gil, Michael R. Crusoe, Kristian Peters, Daniel Schober (2020):
                 <strong>FAIR Computational Workflows</strong></a>.
                 <em>Data Intelligence</em>  <strong>2</strong>(1):108–121
                 <a href="https://doi.org/10.1162/dint_a_00033" target="_blank" class=" externalLink">https://doi.org/10.1162/dint_a_00033</a>
+              </li>
+
+              <li id="ref-10" property="schema:citation">
+              Directorate-General for Research and Innovation (European Commission) (2019):
+              <strong>Future of scholarly publishing and scholarly communication</strong>.
+              Jean-Claude Guédon, Michael Jubb, Bianca Kramer, Mikael Laakso, Birgin Scmidt, Elena Šimukovič, Jennifer Hansen, 
+              Robert Kiley, Anne Kitson, Wim van der Stelt, Kamilla Markram, Mark Petterson (eds.)             
+              Report of the Expert Group to the European Commission.
+              ISBN 978-92-79-97238-6
+              <a href="https://doi.org/10.2777/836532">https://doi.org/10.2777/836532</a>
+              </li>
+
+              <li id="ref-11" property="schema:citation">
+                Arfon M. Smith​, Daniel S. Katz​​, Kyle E. Niemeyer​, FORCE11 Software Citation Working Group (2016):
+                <strong>Software citation principles</strong>
+                <em>PeerJ Computer Science</em> <strong>2</strong>:e86
+                <a href="https://doi.org/10.7717/peerj-cs.86">https://doi.org/10.7717/peerj-cs.86</a>
+              </li>
+
+              <li id="ref-12" property="schema:citation">
+                Mark D. Wilkinson, Michel Dumontier, IJsbrand Jan Aalbersberg, Gabrielle Appleton, Myles Axton, Arie Baak, Niklas Blomberg, Jan-Willem Boiten, Luiz Bonino da Silva Santos, Philip E. Bourne, Jildau Bouwman, Anthony J. Brookes, Tim Clark, Mercè Crosas, Ingrid Dillo, Olivier Dumon, Scott Edmunds, Chris T. Evelo, Richard Finkers, Alejandra Gonzalez-Beltran, Alasdair J.G. Gray, Paul Groth, Carole Goble, Jeffrey S. Grethe, Jaap Heringa, Peter A.C ’t Hoen, Rob Hooft, Tobias Kuhn, Ruben Kok, Joost Kok, Scott J. Lusher, Maryann E. Martone, Albert Mons, Abel L. Packer, Bengt Persson, Philippe Rocca-Serra, Marco Roos, Rene van Schaik, Susanna-Assunta Sansone, Erik Schultes, Thierry Sengstag, Ted Slater, George Strawn, Morris A. Swertz, Mark Thompson, Johan van der Lei, Erik van Mulligen, Jan Velterop, Andra Waagmeester, Peter Wittenburg, Katherine Wolstencroft, Jun Zhao & Barend Mons (2016):
+                <strong>The FAIR Guiding Principles for scientific data management and stewardship</strong>
+                <em>Scientific Data</em> <strong>3</strong>:160018
+                <a href="https://doi.org/10.1038/sdata.2016.18">https://doi.org/10.1038/sdata.2016.18</a>
               </li>
 
               <li id="ref-xx" property="schema:citation">Sean Bechhofer, Iain Buchan, David De Roure, Paolo Missier, John
@@ -324,7 +395,6 @@
                 <strong>29</strong>(2) pp 599-611.
                 <a href="https://doi.org/10.1016/j.future.2011.08.004">https://doi.org/10.1016/j.future.2011.08.004</a>
                 <small>(not Open Access, see <a href="http://users.ox.ac.uk/~oerc0033/preprints/research-objects.pdf">preprint</a>)</small>
-
               </li>
             </ol>
           </div>
